<resources>
    <string name="app_name">DAS_Entrega2</string>
    <string name="lacarta">La Carta</string>
    <string name="bienvenida">Hola:</string>
    <string name="continPedido">CONTINUAR CON EL PEDIDO</string>
    <string name="usuario">Usuario:</string>
    <string name="contraseña">Contraseña:</string>
    <string name="login">INICIAR SESION</string>
    <string name="añadiryvolver">AÑADIR AL PEDIDO Y VOLVER A LA CARTA</string>
    <string name="finalizarPedido">FINALIZAR PEDIDO</string>
    <string name="guardarPrefs">GUARDAR PREFERENCIAS</string>
    <string name="ultPedido">Tu último pedido</string>
    <string name="importe">Importe total</string>
    <string name="irCarta">IR A LA CARTA</string>
    <string name="ingredientes">"Ingredientes: "</string>
    <string name="precio">"Precio: "</string>
    <string name="usudialogo">"El usuario "</string>
    <string name="noexiste">" no existe"</string>
    <string name="registrar">¿Deseas registrarte?</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="almenos1caracter">El usuario o la Contraseña deben tener al menos 1 caracter</string>
    <string name="existePero">" existe, PERO la Contraseña es incorrecta"</string>
    <string name="pizzas">Pizzas</string>
    <string name="ensaladas">Ensaladas</string>
    <string name="arroces">Arroces</string>
    <string name="espaguetis">Espagueti</string>
    <string name="especialidad">Especialidad</string>
    <string name="ajustes">Ajustes</string>
    <string name="masInfo">Mas información</string>
    <string name="prefs">Preferencias</string>
    <string name="eligeComida">Elige tu comida favorita</string>
    <string name="eligeIdioma">Elige tu idioma para la aplicación</string>
    <string name="pregComida">¿Cual es tu comida preferida?</string>
    <string name="pregIdioma">¿Cual es tu idioma preferido?</string>
    <string name="continuarPedido">Continuar con el pedido</string>
    <string name="postreOcarta">¿Desea ir a los Postres o se le ha olvidado pedir algo de la carta?</string>
    <string name="postres">¡Postres!</string>
    <string name="volverCarta">Volver a la carta</string>
    <string name="finPedido">Finalizar pedido</string>
    <string name="finOpostre">¿Desea finalizar el pedido o se le ha olvidado pedir algún postre?</string>
    <string name="finzar">Finalizar</string>
    <string name="volverPostres">Volver a los postres</string>
    <string name="añaped">"Has añadido a tu pedido: "</string>
    <string name="noañaped">No has añadido nada</string>
    <string name="nopostre">No has añadido ningún postre</string>
    <string name="hasfin">HAS FINALIZADO TU PEDIDO</string>
    <string name="pedfinn">Pedido finalizado</string>
    <string name="verpedi">Ver tu pedido</string>
    <string name="pizza1">Pizza Margarita</string>
    <string name="pizza2">Pizza Boloñesa</string>
    <string name="pizza3">Pizza Carbonara</string>
    <string name="pizza4">Pizza 4 Quesos</string>
    <string name="pizza5">Pizza Napolitana</string>
    <string name="pizza6">Pizza Atun</string>
    <string name="pizza7">Pizza Sorrento</string>
    <string name="pizza8">Pizza Tropical</string>
    <string name="ensalada1">Ensalada Mixta</string>
    <string name="ensalada2">Ensalada Tropical</string>
    <string name="ensalada3">Ensalada de Pasta</string>
    <string name="ensalada4">Ensalada Campera</string>
    <string name="ensalada5">Ensalada Capresse</string>
    <string name="ensalada6">Ensalada Fruti di mare</string>
    <string name="arroz1">Risotto de Setas</string>
    <string name="arroz2">Risotto Marinero</string>
    <string name="arroz3">Risotto 4 Quesos</string>
    <string name="espagueti1">Espagueti al Pesto</string>
    <string name="espagueti2">Espagueti Boloñesa</string>
    <string name="espagueti3">Espagueti Carbonara</string>
    <string name="espagueti4">Espagueti Siciliana</string>
    <string name="espagueti5">Espagueti con Gambas</string>
    <string name="especialidad1">Lasagna de Carne</string>
    <string name="especialidad2">Ravioli de Setas</string>
    <string name="especialidad3">Tagliatelle al Andrea</string>
    <string name="especialidad4">Carpaccio de Carne</string>
    <string name="especialidad5">Provolone a la Plancha</string>
    <string name="postre1">Profiteroles</string>
    <string name="postre2">Tarta de queso</string>
    <string name="postre3">Tiramisú</string>
    <string name="postre4">Panna cotta</string>
    <string name="aña">" añadido"</string>
    <string name="registrarse">Regístrate</string>
    <string name="yaexiste">" ya existe"</string>
    <string name="noestareg">" no esta registrado, pulsa REGISTRATE"</string>
    <string name="titalmenos1caracter">El título debe tener al menos 1 caracter</string>
    <string name="subidaafirebase">Imagen subida a Firebase</string>
    <string name="eligefoto">Debes sacar una foto o elegir desde la galeria para subirla a Firebase</string>
    <string name="notifir">Se realizó un nuevo pedido</string>
    <string name="precultped">"Precio del último pedido: "</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
    <string name="titulo">"Título: "</string>
    <string name="descripcion">"Descripción: "</string>
    <string name="cargaFirebase">La imagen se está cargando desde Firebase...</string>
    <string name="sacarFoto">Sacar Foto</string>
    <string name="galeria">Galería</string>
    <string name="subirImagen">Subir Imagen</string>
    <string name="verRecetas">Ver Recetas</string>
    <string name="cargalistaFirebase">Cargando desde Firebase...</string>
    <string name="captarImagenes">Captar Imágenes</string>
    <string name="encuentraRestaurantes">Encuentra Restaurantes</string>
    <string name="cargaMapa">Se están cargando los restaurantes más cercanos en un rádio de 350 metros...</string>
    <string name="nosehanencont">No se han encontrado restaurantes en un rádio de 350 metros</string>
    <string name="opcAdi">Opciones adicionales</string>
    <string name="mennav">Menú</string>
    <string name="reproducir">Reproducir</string>
    <string name="detener">Detener</string>
    <string name="repromus">Se está reproduciendo música</string>
</resources>