<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/mennav">
        <menu>
            <item
                android:id="@+id/captarImagen"
                android:icon="@android:drawable/ic_menu_camera"
                android:title="@string/captarImagenes" />
        </menu>
    </item>
    <item
        android:id="@+id/maps"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/encuentraRestaurantes" />
    <item android:title="Controla la música">
        <menu>
            <item
                android:id="@+id/musicaplay"
                android:icon="@android:drawable/ic_media_play"
                android:title="@string/reproducir"
                />
            <item
                android:id="@+id/musicapause"
                android:icon="@drawable/stopmusic"
                android:title="@string/detener"
                />
        </menu>
    </item>
</menu>